# docs/swagger.json
@@ -480,6 +480,90 @@
                 }
             }
         },
+        "/categories": {
+            "post": {
+                "description": "Создание новой категории",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "categories"
+                ],
+                "summary": "Добавить категорию",
+                "parameters": [
+                    {
+                        "description": "Данные категории",
+                        "name": "category",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entities.Category"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/entities.Category"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/categories/{id}": {
+            "get": {
+                "description": "Получение информации о категории по ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "categories"
+                ],
+                "summary": "Получить категорию",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID категории",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.Category"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/discounts": {
             "post": {
                 "description": "Создание новой скидки",
@@ -860,23 +944,20 @@
                 "author": {
                     "type": "string"
                 },
-                "author_id": {
-                    "type": "string"
-                },
-                "available": {
+                "available_date": {
                     "type": "string"
                 },
                 "category": {
-                    "type": "string"
+                    "$ref": "#/definitions/entities.Category"
                 },
                 "category_id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "description": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "isbn": {
                     "type": "string"
@@ -891,18 +972,29 @@
                     "type": "boolean"
                 },
                 "price": {
-                    "type": "string"
+                    "type": "number"
                 },
                 "publisher": {
                     "$ref": "#/definitions/entities.Publisher"
                 },
                 "publisher_id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "rating": {
                     "type": "number"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "entities.Category": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 }
             }
@@ -914,7 +1006,7 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "percentage": {
                     "type": "number"
@@ -931,7 +1023,7 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "items": {
                     "type": "string"
@@ -940,10 +1032,13 @@
                     "type": "string"
                 },
                 "total_amount": {
-                    "type": "string"
+                    "type": "number"
+                },
+                "user": {
+                    "$ref": "#/definitions/entities.User"
                 },
                 "user_id": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -954,7 +1049,7 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -967,20 +1062,26 @@
         "entities.Review": {
             "type": "object",
             "properties": {
+                "book": {
+                    "$ref": "#/definitions/entities.Book"
+                },
                 "book_id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "comment": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "rating": {
                     "type": "string"
                 },
+                "user": {
+                    "$ref": "#/definitions/entities.User"
+                },
                 "user_id": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -993,13 +1094,13 @@
                 "email": {
                     "type": "string"
                 },
+                "first_name": {
+                    "type": "string"
+                },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
-                "lastname": {
-                    "type": "string"
-                },
-                "name": {
+                "last_name": {
                     "type": "string"
                 },
                 "password": {
